# tp-lab06

./: README.md
.github/workflows/: deb.yml  default.yml  dmg.yml  msi.yml  rpm.yml  workflow deb.yml  workflow dmg.yml  workflow msi.yml  workflow.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
